@@ -472,6 +472,7 @@ Heat and Cooling meter Kamstrup Multical 602 (multical602) (in C1 mode)
 Heat and Cooling meter Kamstrup Multical 603 (multical603) (in C1 mode)
 Heat and Cooling meter Kamstrup Multical 803 (multical803) (in C1 mode)
 Heat meter Apator Elf (elf)
+Heat meter Enercal F2 (enercal)
 Heat meter Diehl Sharky 775 (sharky)
 Heat meter Diehl Sharky 774 (sharky774)
 Heat meter Maddelena microClima (microclima)
