@@ -1,4 +1,6 @@
 
+Added Enercal F2 heat meter.
+
 Paulo Rossi added support for the AMB3665-M wmbus dongle for N-mode 169 MHz telegrams. Thanks Paulo!
 
 Version 1.8.0: 2022-06-25
